Adding production folder for gh-pages

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 		<title>Intro to Web Animations API</title>
 		<link rel="stylesheet" type="text/css" href="./css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
-		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.min.css">
+		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.css">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
 		<script src="js/web-animations-next.min.js"></script>
 		<script>hljs.initHighlightingOnLoad();</script>
@@ -15,9 +15,9 @@
 		<section class="slide slide--title">
 			<h1 id="title-animation" class="slide--title__h1">The Web Animations API</h1>
 			<h2 id="h2-animation" class="slide--title__h2">FINALLY</h2>
-			<p>An quick intro by <a href='https://twitter.com/seejamescode' target='_blank'>James Y. Rauhut.</a>
+			<p>An quick intro by <a href='https://twitter.com/seejamescode' target='_blank'>James Y Rauhut.</a>
 			<br />
-			Much content found from <a href='https://birtles.wordpress.com/2013/06/26/introducing-web-animations/' target='_blank'>Brian Birtles</a> and <a href='http://danielcwilson.com/blog/2015/07/animations-intro/' target='_blank'>Dan Wilson</a>.</p>
+			Much content taken from <a href='https://birtles.wordpress.com/2013/06/26/introducing-web-animations/' target='_blank'>Brian Birtles</a> and <a href='http://danielcwilson.com/blog/2015/07/animations-intro/' target='_blank'>Dan Wilson</a>.</p>
 		</section>
 		<section class="slide slide--support" style='overflow: hidden;'>
 			<div class="slide__header">
