--- a/html/index.html
+++ b/html/index.html
@@ -525,7 +525,7 @@ backgroundSlider.addEventListener('change', function() {
 		<section class="slide slide--support" style='overflow: hidden;'>
 			<div class="slide__header">
 				<h2 class="slider__header__title">
-					Support <strong>All the Browsers!</strong>
+					6 <strong>Support All the Browsers</strong>
 				</h2>
 				<p>All major browsers are currently supported by <a href='https://github.com/web-animations/web-animations-js' target="_blank">polyfill</a>. Chrome and Firefox already natively support while it is a planned medium priority for the Edge team.</p>
 			</div>
