Odd sizing for Shaq heads fixed

--- a/html/index.html
+++ b/html/index.html
@@ -59,7 +59,9 @@
 			</div>
 			<div class="slide--css__content">
 				<div class="slide--css__content__half">
-					<img class="slide--css__content__half__shaq slide--css__content__half__shaq--css" src="images/shaq.png">
+					<div class="shaq__container">
+						<img class="slide--css__content__half__shaq slide--css__content__half__shaq--css" src="images/shaq.png">
+					</div>
 					<pre><code class="snippet css">
 /* Spinning with CSS */
 .shaq {animation: spin 5s linear infinite;}
@@ -76,7 +78,9 @@
 					</code></pre>
 				</div>
 				<div class="slide--css__content__half">
-					<img id="shaq" class="slide--css__content__half__shaq" src="images/shaq.png">
+					<div class="shaq__container">
+						<img id="shaq" class="slide--css__content__half__shaq" src="images/shaq.png">
+					</div>
 					<pre><code class="snippet js">
 // Spinning with Web Animations API
 var animateShaq = document.getElementById('shaq').animate([
